# agpod

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF-agpod-mcp.md  IMPLEMENTATION_SUMMARY.md  KILO_GUIDE.md  KIRO_GUIDE.md  KIRO_VARIABLES.md  LICENSE  README.md  REFACTOR_SUMMARY.md  SAVE_OPTION_SUMMARY.md  TASK-PROGRESS-TRACK.md  WORKSPACE_STRUCTURE.md  deleted_test.txt  demo_save_option.sh  install.sh  justfile  large_test_diff.txt  release-please-config.json  test_diff.txt
.agents/docs/: case-external-hooks-stdio-protocol.md  case-honcho-integration-plan.md  case-hook-plugin-honcho-spec.md  case-tool-feedback.md  case-tool-implementation-plan.md  design.md  feedback.md  flow-doc-driven-graph-spec.md  honcho-smoke-test.md  honcho-v2-case-integration-notes.md
.agents/docs/issues/: case-server-step-advance-timeout.md
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/actions/build-rust/: action.yml
.github/workflows/: agpod-mcp-release.yml  agpod-mcp.yml  build-artifacts.yml  ci.yml  copilot-setup-steps.yml  pr-asset-build.yml  release-artifacts.yml  release.yml  rust.yml
crates/agpod/: CHANGELOG.md  Cargo.toml
crates/agpod-case/: CHANGELOG.md  Cargo.toml
crates/agpod-case-server/: CHANGELOG.md  Cargo.toml
crates/agpod-case-server/src/: main.rs
crates/agpod-case/src/: cli.rs  client.rs  commands.rs  config.rs  context.rs  error.rs  events.rs  honcho.rs  hooks.rs  lib.rs  output.rs  repo_id.rs  rpc.rs  search.rs  server.rs  server_client.rs  types.rs
crates/agpod-core/: CHANGELOG.md  Cargo.toml
crates/agpod-core/crates/agpod-core/: CHANGELOG.md
crates/agpod-core/src/: lib.rs
crates/agpod-diff/: CHANGELOG.md  Cargo.toml
crates/agpod-diff/crates/agpod-diff/: CHANGELOG.md
crates/agpod-diff/src/: tests.rs  types.rs
crates/agpod-flow/: CHANGELOG.md  Cargo.toml
crates/agpod-flow/src/: cli.rs  commands.rs  config.rs  error.rs  frontmatter.rs  graph.rs  lib.rs  recent.rs  repo_id.rs  scanner.rs  session.rs  storage.rs
crates/agpod-kiro/: CHANGELOG.md  Cargo.toml
crates/agpod-kiro/crates/agpod-kiro/: CHANGELOG.md
crates/agpod-kiro/src/: cli.rs  commands.rs  config.rs  git.rs  plugin.rs  slug.rs  template.rs
crates/agpod-mcp/: CHANGELOG.md  Cargo.toml  DEPRECATED.md
crates/agpod-mcp/prompts/: agent_opus.md
crates/agpod-mcp/src/: hive.rs  hive_provider.rs  lib.rs  main.rs
crates/agpod-path/: Cargo.toml
crates/agpod-vcs/: Cargo.toml
crates/agpod-vcs-path/: CHANGELOG.md  Cargo.toml
crates/agpod-vcs-path/crates/agpod-vcs-path/: CHANGELOG.md
crates/agpod-vcs-path/src/: lib.rs
crates/agpod/crates/agpod/: CHANGELOG.md
crates/agpod/src/: main.rs
docs/: IMPLEMENTATION_SUMMARY.md  KIRO_GUIDE.md  README.md  WORKSPACE_STRUCTURE.md  agent-memo-mcp.md  case-architecture.md  case-cli-output-samples.md  case-configuration.md  case-doc-alignment.md  case-honcho.md  case-implementation-plan.md  case-interface-redesign.md  case-plugins.md  case-show-windowed-output.md  case-step-advance-spec.md  hive-claude-modes.md
docs/agents-md/: agent-memo.md  case-surrealdb.md
examples/: README.md  config.toml
examples/plugins/: branch_name.sh  name.sh
examples/templates/: TEMPLATE_EXTENSION.md
examples/templates/_shared/: base_design.md.j2  base_task.md.j2
examples/templates/default/: DESIGN.md.j2  TASK.md.j2
examples/templates/rust/: DESIGN.md.j2  IMPL.md.j2  TASK.md.j2
examples/templates/vue/: COMPONENT.md.j2  DESIGN.md.j2  TASK.md.j2
hooks/: hive-agent-stop.ts  hive-common.ts  hive-session-start.ts
internal/agpod-mcp/: CHANGELOG.md  README.md  go.mod  go.sum
internal/agpod-mcp/cmd/agpod-mcp/: main.go
internal/agpod-mcp/internal/buildinfo/: buildinfo.go
internal/agpod-mcp/internal/config/: config.go
internal/agpod-mcp/internal/logging/: logging.go
internal/agpod-mcp/internal/mcpserver/: server.go  tools.go  tools_test.go
internal/agpod-mcp/internal/memo/: store.go  store_test.go  types.go  uuid.go  why.go
internal/agpod-mcp/internal/repoid/: repoid.go  repoid_test.go
scripts/: mcp_full_smoke.py
skills/: SKILL.md
skills/agpod-flow/: SKILL.md
src/: config.rs  lib.rs  main.rs
src/diff/: mod.rs  processor.rs  save.rs  tests.rs
src/kilo/: cli.rs  commands.rs  config.rs  error.rs  git.rs  mod.rs  plugin.rs  slug.rs  template.rs
src/kiro/: cli.rs  commands.rs  config.rs  error.rs  git.rs  mod.rs  plugin.rs  slug.rs  template.rs
test_data/: large_config.json
