[package]
name = "agpod"
version = "0.3.0"
edition = "2021"
authors = ["Development Team"]
description = "A powerful agent helper tool with features including git diff minimization for LLM context and token usage optimization"
license = "MIT"
repository = "https://github.com/towry/agpod"
readme = "README.md"
keywords = ["git", "diff", "llm", "cli", "agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agpod"
path = "src/main.rs"

[dependencies]
regex = "1.0"
