[package]
name = "agpod"
version = "0.4.1"
edition = "2021"
authors = ["Development Team"]
description = "A powerful agent helper tool with features including git diff minimization for LLM context and token usage optimization"
license = "MIT"
repository = "https://github.com/towry/agpod"
readme = "README.md"
keywords = ["git", "diff", "llm", "cli", "agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agpod"
path = "src/main.rs"

[dependencies]
regex = "1.11"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
minijinja = { version = "2.12", features = ["loader"] }
dialoguer = "0.11"
dirs = "5.0"
walkdir = "2.5"
chrono = "0.4"
thiserror = "2.0"
anyhow = "1.0"
pinyin = "0.10"
rand = "0.8"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.13"
