[workspace]
members = [
    "crates/agpod-core",
    "crates/agpod-diff",
    "crates/agpod-kiro",
    "crates/agpod-vcs",
    "crates/agpod",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["Development Team"]
license = "MIT"
repository = "https://github.com/towry/agpod"

[workspace.dependencies]
# Workspace crates
agpod-core = { path = "crates/agpod-core" }
agpod-diff = { path = "crates/agpod-diff" }
agpod-kiro = { path = "crates/agpod-kiro" }
agpod-vcs = { path = "crates/agpod-vcs" }

# External dependencies
regex = "1.11"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
minijinja = { version = "2.12", features = ["loader"] }
dialoguer = "0.11"
dirs = "5.0"
walkdir = "2.5"
chrono = "0.4"
thiserror = "2.0"
anyhow = "1.0"
pinyin = "0.10"
rand = "0.8"
serde_json = "1.0"
tempfile = "3.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
git2 = { version = "0.19", default-features = false, features = ["https"] }
