[package]
name = "agpod-case-server"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Case server for shared agpod case database access"

[[bin]]
name = "agpod-case-server"
path = "src/main.rs"

[dependencies]
agpod-case = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
