[package]
name = "agpod-case-server"
version = "0.3.5"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Case server for shared agpod case database access"
keywords = ["agpod", "case", "server"]
categories = ["command-line-utilities"]

[[bin]]
name = "agpod-case-server"
path = "src/main.rs"

[dependencies]
agpod-case = { workspace = true }
agpod-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
