[package]
name = "agpod-case"
version = "0.4.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Exploration case tracker"

[dependencies]
agpod-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
surrealdb = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
termtree = { workspace = true }
uuid = { workspace = true }
schemars = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
