[package]
name = "agpod-core"
version = "0.11.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core configuration and utilities for agpod"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
