[package]
name = "agpod-diff"
version = "0.5.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Git diff minimization for LLM context optimization"

[dependencies]
agpod-core = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
