[package]
name = "agpod-kiro"
version = "0.5.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PR draft workflow management for agpod"

[dependencies]
agpod-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
minijinja = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
pinyin = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
