[package]
name = "agpod-mcp"
version = "0.7.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for agpod case workflows"

[dependencies]
agpod-case = { workspace = true }
agpod-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
