[package]
name = "agpod-vcs-path"
version = "0.6.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "VCS path information formatter for Git and Jujutsu repositories"

[dependencies]
agpod-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
git2 = { version = "0.19", default-features = false, features = ["https"] }
jj-lib = { version = "0.34.0", optional = true }
indexmap = { version = "2", optional = true }

[features]
default = []
jujutsu = ["jj-lib", "indexmap"]
