[package]
name = "agpod"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A powerful agent helper tool with features including git diff minimization for LLM context and token usage optimization"
readme = "../../README.md"
keywords = ["git", "diff", "llm", "cli", "agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agpod"
path = "src/main.rs"

[dependencies]
agpod-core = { workspace = true }
agpod-diff = { workspace = true }
agpod-kiro = { workspace = true }
agpod-vcs-path = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
